[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scencs/Audio Player.gd" type="Script" id=2]

[node name="Audio Player" type="Node"]
script = ExtResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="OneShot Player" type="AudioStreamPlayer" parent="."]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
[connection signal="finished" from="OneShot Player" to="." method="_on_OneShot_Player_finished"]
